--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </a>
                   </div>
               </div>
-              <a href="#"><img src="Images/kavya.jpg" class="img-fluid rounded-circle" alt="profile photo" style="margin-top: 9%;" ></a>
+              <img src="Images/kavya.jpg" class="img-fluid rounded-circle" alt="profile photo" style="margin-top: 9%;" >
          </div>
       </nav>
     </div>
