--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </a>
                   </div>
               </div>
-              <img src="Images/kavya.jpg" class="img-fluid rounded-circle" alt="profile photo" style="margin-top: 9%;" >
+<!--               <img src="Images/kavya.jpg" class="img-fluid rounded-circle" alt="profile photo" style="margin-top: 9%;" > -->
          </div>
       </nav>
     </div>
